
20/02/2002 Michael Goffioul <goffioul@imec.be>
  * slave: prevent konqueror to consider a trailing slash as a directory
    specification (simply add a config entry in protocol file)
  * general: large UI standardization by making use of KDialogBase along
    with KGuiItem
  * kicker menu: possibility to open main Options Dialog from the menu

21/02/2002 Michael Goffioul <goffioul@imec.be>
  * general: splitted the printer state into enable/disable and start/stop
    and modified the GUI to reflect this
  * general: removed the KMManager::configure(), obsoleted by the complete
    options dialog being shown
  * kicker extension: extension of the menu plugin to allow access to the
    server configuration tool as well as the "kprinter" utility.

25/02/2002 Michael Goffioul <goffioul@imec.be>
  * LPR: added printer testing support

26/02/2002 Michael Goffioul <goffioul@imec.be>
  * general: printer filtering specs are now ORed instead of ANDed
  * general: changed "Advanced" to "Driver Settings"
  * CUPS: fixed RIPCache problem, added support for possible suffixes

27/02/2002 Michael Goffioul <goffioul@imec.be>
  * CUPS: workaround to allow special characters in login/password without
    breaking security. Possible now to use safely chars like '@' and '/'
    in login.
  * general: added a check box in the config dialog to enable/disable
    font embedding into PS data (compatible with Qt settings).

28/02/2002 Michael Goffioul <goffioul@imec.be>
  * general: job viewer updated correctly on plugin reload -> additional
    columns and "history" action state
  * general: internal *Settings objects are synchonized on config changes
    (CupsInfos and LprSettings)
  * general: improved feedback to user when creating driver DB
  * CUPS: speed optimization when creating driver DB (simple hack to avoid
    to parse the entire PPD file each time => much better)
  * kdeprintfax: added "-n" and "-f %email" by default for the Hylafax
    system