@@ -83,7 +83,7 @@ bool checkLpdQueue(const char *host, const char *queue)
 
 	char	res[64] = {0};
 	snprintf(res,64,"%c%s\n",(char)4,queue);
-	if (sock.writeBlock(res, strlen(res)) != strlen(res))
+	if (sock.writeBlock(res, strlen(res)) != (Q_LONG)(strlen(res)))
 		return false;
 	
 	char	buf[1024] = {0};
